--- a/k8s-prod/backend.yaml
+++ b/k8s-prod/backend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: adijaiswal/backend:latest
+          image: santoshbd67/backend:latest
           ports:
             - containerPort: 5000
           env:
