--- a/k8s-prod/frontend.yaml
+++ b/k8s-prod/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: adijaiswal/frontend:latest
+          image: santoshbd67/frontend:latest
           ports:
             - containerPort: 80
 ---
