--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,5 @@
-DB_HOST=mysql
-DB_USER=root
-DB_PASSWORD=Aditya
+DB_HOST=database-1.chq2k6qs0ud6.us-east-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=admin123
 DB_NAME=crud_app
 JWT_SECRET=devopsShackSuperSecretKey
-
